🔧 refactor(finrisk): streamline admin UI handling in AssetsView and ProfileView
- Removed redundant useEffect hooks that controlled visibility of admin-only actions based on admin UI state.
- Updated button text in AssetsView to conditionally display "Close register" only for admin users.